# Kira-Ragbot

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  PROJECT_OVERVIEW.md  README.md  app.py  pyproject.toml  render.yaml  requirements.txt
api/: __init__.py  auth.py  db.py  main.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
results/: abstention_records.json  abstention_sweep.csv
scripts/: answer.py  build_dense_index.py  chunk_corpus.py  compare_retrieval.py  eval_retrieval.py  run_ablation.py  run_abstention.py  verify_answer.py
src/measurable_rag/: __init__.py  config.py  console.py
src/measurable_rag/data/: __init__.py  chunking.py  eval_set.py  loaders.py  models.py  qrels.py  user_docs.py
src/measurable_rag/eval/: __init__.py  ablation.py  abstention.py  harness.py  metrics.py
src/measurable_rag/generation/: __init__.py  abstain.py  generator.py  verify.py
src/measurable_rag/retrieval/: __init__.py  build.py  dense.py  embedder.py  fusion.py  pipeline.py  rerank.py  sparse.py  web.py
tests/: test_ablation.py  test_abstention.py  test_chunking.py  test_metrics.py  test_verify.py
